--- a/api_usage/petfinder_api.ipynb
+++ b/api_usage/petfinder_api.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apiKey = '0L7quEtFIVT4EKZ5Yk5Hnp6zoI227A4sLjQP2QLcoiW7g7dMym'\n",
-    "apiSecret = 'S6TAA5SP0o2RWZr1LFx5CwtANlYZAmdE5sK6uZI3'\n",
+    "# apiKey = \n",
+    "# apiSecret = \n",
     "pf = petpy.Petfinder(key = apiKey, secret = apiSecret)"
    ]
   },
